2002-08-02  Paul D. Smith  <psmith@gnu.org>

	* LINGUAS: Add a new translation for Swedish (sv).

2002-04-21  Paul D. Smith  <psmith@gnu.org>

	* LINGUAS, hr.po: Added new translation: Croatian.

	* da.po, de.po, es.po, fr.po, gl.po, he.po, ja.po, ko.po, nl.po,
	pl.po, pt_BR.po, ru.po, tr.po: Moved from i18n to here.
	* .cvsignore: Moved from i18n to here.

	* POTFILES.in, LINGUAS, Makevars: Created.