@@ -1,5 +1,5 @@
-# Set of available languages: 14 languages
+# Set of available languages: 16 languages
 
-da de es fr gl he hr ja ko nl pl pt_BR sv ru tr
+da de es fr gl he hr ja ko nl pl pt_BR sv ru tr zh_CN
 
 # Can't seem to get en@quot and en@boldquot to build properly?
